force-app/main/default/objects/Listing__c/fields/SalesWebsite__c.field-meta.xml
<CustomField>
    <fullName>SalesWebsite__c</fullName>
    <description
  >The website URL for learning more about buying this App from the Publisher.</description>
    <inlineHelpText
  >The website URL for learning more about buying this App from the Publisher.</inlineHelpText>
    <label>SalesWebsite</label>
    <type>Url</type>
</CustomField>