force-app/main/default/objects/Listing__c/fields/SearchBlurb__c.field-meta.xml
<CustomField>
    <fullName>SearchBlurb__c</fullName>
    <description
  >Search Blurb to display on the search results page.</description>
    <inlineHelpText
  >Search Blurb to display on the search results page.</inlineHelpText>
    <label>Tagline</label>
    <length>75</length>
    <type>Text</type>
</CustomField>