force-app/main/default/objects/Listing__c/fields/SepaApplicationFee__c.field-meta.xml
<CustomField>
    <fullName>SepaApplicationFee__c</fullName>
    <description
  >Indicates the % to charge on listings purchased with a SEPA payment type.</description>
    <inlineHelpText
  >Indicates the % to charge on listings purchased with a SEPA payment type.</inlineHelpText>
    <label>SEPA Application Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>