force-app/main/default/objects/Listing__c/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <description
  >A brief description that is displayed at the top of the listing, in results pages, and in hover overlays.</description>
    <inlineHelpText
  >A brief description that is displayed at the top of the listing, in results pages, and in hover overlays.</inlineHelpText>
    <label>Brief Description</label>
    <type>TextArea</type>
</CustomField>