force-app/main/default/objects/Listing__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>The specific date when the job should start.</description>
    <inlineHelpText
  >The specific date when the job should start.</inlineHelpText>
    <label>Starts</label>
    <type>Date</type>
</CustomField>