force-app/main/default/objects/Listing__c/fields/StartType__c.field-meta.xml
<CustomField>
    <fullName>StartType__c</fullName>
    <description
  >Indicates if the job should start immediately or on a specific date.</description>
    <inlineHelpText
  >Indicates if the job should start immediately or on a specific date.</inlineHelpText>
    <label>Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>Specific Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>