force-app/main/default/objects/Listing__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description
  >The specific state/province in which the job must be filled.</description>
    <inlineHelpText
  >The specific state/province in which the job must be filled.</inlineHelpText>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>