force-app/main/default/objects/Listing__c/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <description>Indicates the submission status from the TE org.</description>
    <inlineHelpText
  >Indicates the submission status from the TE org.</inlineHelpText>
    <label>Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready for Submission / Incomplete</fullName>
                <default>true</default>
                <label>Not Ready for Submission / Incomplete</label>
            </value>
            <value>
                <fullName>Ready for Submission</fullName>
            </value>
            <value>
                <fullName>Submitted - Pending Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>