force-app/main/default/objects/Listing__c/fields/SubscriptionPlan__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionPlan__c</fullName>
    <label>SubscriptionPlan</label>
    <referenceTo>SubscriptionPlan__c</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>