force-app/main/default/objects/Listing__c/fields/Support24x7__c.field-meta.xml
<CustomField>
    <fullName>Support24x7__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if support is available for your app 24 hours a day, 7 days a week.</description>
    <inlineHelpText
  >Indicates if support is available for your app 24 hours a day, 7 days a week.</inlineHelpText>
    <label>Support24x7</label>
    <type>Checkbox</type>
</CustomField>