force-app/main/default/objects/Listing__c/fields/SupportDetails__c.field-meta.xml
<CustomField>
    <fullName>SupportDetails__c</fullName>
    <description
  >Detailed information on the support provided by the publisher for this Listing.</description>
    <inlineHelpText
  >Detailed information on the support provided by the publisher for this Listing.</inlineHelpText>
    <label>Support Details</label>
    <type>TextArea</type>
</CustomField>