force-app/main/default/objects/Listing__c/fields/SupportEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>SupportEmailAddress__c</fullName>
    <description
  >The address where customers can email you to get support for your app.</description>
    <inlineHelpText
  >The address where customers can email you to get support for your app.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>