force-app/main/default/objects/Listing__c/fields/SupportEmailCost__c.field-meta.xml
<CustomField>
    <fullName>SupportEmailCost__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if email support costs something beyond the standard app fee.</description>
    <inlineHelpText
  >Indicates if email support costs something beyond the standard app fee.</inlineHelpText>
    <label>SupportEmailCost</label>
    <type>Checkbox</type>
</CustomField>