force-app/main/default/objects/Listing__c/fields/SupportKnowledgeBaseCost__c.field-meta.xml
<CustomField>
    <fullName>SupportKnowledgeBaseCost__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if knowledge base support costs something beyond the standard app fee.</description>
    <inlineHelpText
  >Indicates if knowledge base support costs something beyond the standard app fee.</inlineHelpText>
    <label>SupportKnowledgeBaseCost</label>
    <type>Checkbox</type>
</CustomField>