force-app/main/default/objects/Listing__c/fields/SupportKnowledgeBaseURL__c.field-meta.xml
<CustomField>
    <fullName>SupportKnowledgeBaseURL__c</fullName>
    <description
  >The URL where customers can read your knowledge base to get support for your app.</description>
    <inlineHelpText
  >The URL where customers can read your knowledge base to get support for your app.</inlineHelpText>
    <label>Knowledge Base URL</label>
    <type>Url</type>
</CustomField>