force-app/main/default/objects/Listing__c/fields/SupportNotProvided__c.field-meta.xml
<CustomField>
    <fullName>SupportNotProvided__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates that no support is provided for the app by the publisher.</description>
    <inlineHelpText
  >Indicates that no support is provided for the app by the publisher.</inlineHelpText>
    <label>No Support</label>
    <type>Checkbox</type>
</CustomField>