force-app/main/default/objects/Listing__c/fields/SupportOnlineChatCost__c.field-meta.xml
<CustomField>
    <fullName>SupportOnlineChatCost__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if online chat support costs something beyond the standard app fee.</description>
    <inlineHelpText
  >Indicates if online chat support costs something beyond the standard app fee.</inlineHelpText>
    <label>SupportOnlineChatCost</label>
    <type>Checkbox</type>
</CustomField>