force-app/main/default/objects/Listing__c/fields/SupportOnlineChatURL__c.field-meta.xml
<CustomField>
    <fullName>SupportOnlineChatURL__c</fullName>
    <description
  >The URL where customers can chat online with you to get support for your app.</description>
    <inlineHelpText
  >The URL where customers can chat online with you to get support for your app.</inlineHelpText>
    <label>Online Chat URL</label>
    <type>Url</type>
</CustomField>