force-app/main/default/objects/Listing__c/fields/SupportPhoneCost__c.field-meta.xml
<CustomField>
    <fullName>SupportPhoneCost__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if phone support costs something beyond the standard app fee.</description>
    <inlineHelpText
  >Indicates if phone support costs something beyond the standard app fee.</inlineHelpText>
    <label>SupportPhoneCost</label>
    <type>Checkbox</type>
</CustomField>