force-app/main/default/objects/Listing__c/fields/SupportPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SupportPhoneNumber__c</fullName>
    <description
  >The phone number where customers can call you to get support for your app.</description>
    <inlineHelpText
  >The phone number where customers can call you to get support for your app.</inlineHelpText>
    <label>Phone Support</label>
    <type>Phone</type>
</CustomField>