force-app/main/default/objects/Listing__c/fields/SupportPremiumAvailable__c.field-meta.xml
<CustomField>
    <fullName>SupportPremiumAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if premium support consulting partners are available for your app.</description>
    <inlineHelpText
  >Indicates if premium support consulting partners are available for your app.</inlineHelpText>
    <label>Premium Support Available</label>
    <type>Checkbox</type>
</CustomField>