force-app/main/default/objects/Listing__c/fields/SupportSLA__c.field-meta.xml
<CustomField>
    <fullName>SupportSLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if a consulting partner level agreement (SLA) exists for your app.</description>
    <inlineHelpText
  >Indicates if a consulting partner level agreement (SLA) exists for your app.</inlineHelpText>
    <label>Service Level Agreement</label>
    <type>Checkbox</type>
</CustomField>