force-app/main/default/objects/Listing__c/fields/SystemRequirements__c.field-meta.xml
<CustomField>
    <fullName>SystemRequirements__c</fullName>
    <description
  >Any additional system requirements your app may have.</description>
    <inlineHelpText
  >Specify any additional system requirements that your app may have. For example, supported browsers, operating systems, or hardware. If your app does not have any additional system requirements, select &quot;No Additional System Requirements&quot;.</inlineHelpText>
    <label>Other System Requirements</label>
    <type>TextArea</type>
</CustomField>