force-app/main/default/objects/Listing__c/fields/TestDriveCampaignID__c.field-meta.xml
<CustomField>
    <fullName>TestDriveCampaignID__c</fullName>
    <label>TestDriveCampaignID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>