force-app/main/default/objects/Listing__c/fields/TestDriveOrgID__c.field-meta.xml
<CustomField>
    <fullName>TestDriveOrgID__c</fullName>
    <description
  >The record ID for the organization that is your test drive. This was added to make the query of the organization name on the Publishing pages simpler.</description>
    <inlineHelpText
  >The record ID for the organization that is your test drive. This was added to make the query of the organization name on the Publishing pages simpler.</inlineHelpText>
    <label>TestDriveOrgID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>