force-app/main/default/objects/Listing__c/fields/TestDrivePassword__c.field-meta.xml
<CustomField>
    <fullName>TestDrivePassword__c</fullName>
    <description
  >The evaluation password that is used to access the test drive that is associated with the AppListing.</description>
    <inlineHelpText
  >The evaluation password that is used to access the test drive that is associated with the AppListing.</inlineHelpText>
    <label>TestDrivePassword</label>
    <length>50</length>
    <type>Text</type>
</CustomField>