force-app/main/default/objects/Listing__c/fields/TestDriveUserName__c.field-meta.xml
<CustomField>
    <fullName>TestDriveUserName__c</fullName>
    <description
  >The evaluation user name used to access the test drive for this AppListing.</description>
    <inlineHelpText
  >The evaluation user name used to access the test drive for this AppListing.</inlineHelpText>
    <label>TestDriveUserName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>