force-app/main/default/objects/Listing__c/fields/TileWidth__c.field-meta.xml
<CustomField>
    <fullName>TileWidth__c</fullName>
    <description
  >Indicates whether the content tile is of single width or double width</description>
    <inlineHelpText
  >Indicates whether the content tile is of single width or double width</inlineHelpText>
    <label>TileWidth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1x</fullName>
                <default>true</default>
                <label>1x</label>
            </value>
            <value>
                <fullName>2x</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>