force-app/main/default/objects/Listing__c/fields/Total_Review_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Review_Count__c</fullName>
    <label>Total Review Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>