force-app/main/default/objects/Listing__c/fields/Total_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Review_Score__c</fullName>
    <label>Total Review Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>