force-app/main/default/objects/Listing__c/fields/TrialCampaignID__c.field-meta.xml
<CustomField>
    <fullName>TrialCampaignID__c</fullName>
    <label>TrialCampaignID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>