force-app/main/default/objects/Listing__c/recordTypes/App.recordType-meta.xml
<RecordType>
    <fullName>App</fullName>
    <active>true</active>
    <description>An AppExchange App Listing</description>
    <label>App</label>
</RecordType>