force-app/main/default/objects/Listing__c/recordTypes/BoltTemplate.recordType-meta.xml
<RecordType>
    <fullName>BoltTemplate</fullName>
    <active>true</active>
    <label>BoltTemplate</label>
</RecordType>