force-app/main/default/objects/Listing__c/recordTypes/Component.recordType-meta.xml
<RecordType>
    <fullName>Component</fullName>
    <active>true</active>
    <label>Component</label>
</RecordType>