force-app/main/default/objects/Listing__c/recordTypes/Content.recordType-meta.xml
<RecordType>
    <fullName>Content</fullName>
    <active>true</active>
    <description>An AppExchange Content Listing</description>
    <label>Content</label>
</RecordType>