force-app/main/default/objects/Listing__c/recordTypes/Data.recordType-meta.xml
<RecordType>
    <fullName>Data</fullName>
    <active>true</active>
    <label>Data</label>
</RecordType>