force-app/main/default/objects/Listing__c/recordTypes/Job.recordType-meta.xml
<RecordType>
    <fullName>Job</fullName>
    <active>true</active>
    <description>An AppExchange developer job listing</description>
    <label>Job</label>
</RecordType>