force-app/main/default/objects/Listing__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <description>An AppExchange Consulting Partner Listing</description>
    <label>Service</label>
</RecordType>